Input, output and viewchild

--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,1 +1,45 @@
-<p>graficas1 works!</p>
+<div class="row">
+
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-graficodona [Labels]="graficos.grafico1.labels" [Data]="graficos.grafico1.data" [Type]="graficos.grafico1.type" [Leyend]="graficos.grafico1.leyenda"></app-graficodona>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-graficodona [Labels]="graficos.grafico2.labels" [Data]="graficos.grafico2.data" [Type]="graficos.grafico2.type" [Leyend]="graficos.grafico2.leyenda"></app-graficodona>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-graficodona [Labels]="graficos.grafico3.labels" [Data]="graficos.grafico3.data" [Type]="graficos.grafico3.type" [Leyend]="graficos.grafico3.leyenda"></app-graficodona>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-graficodona [Labels]="graficos.grafico4.labels" [Data]="graficos.grafico4.data" [Type]="graficos.grafico4.type" [Leyend]="graficos.grafico4.leyenda"></app-graficodona>
+
+            </div>
+        </div>
+    </div>
+
+
+</div>
