--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,47 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+
+                <h5 class="card-title">Barra de Progreso {{ progreso1 }} - {{ progreso2 }} </h5>
+
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.ariaValuenow]="progreso1" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width]="progreso1 + '%'" style="width: 75% "></div>
+                </div>
+
+                <br>
+
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" [attr.ariaValuenow]="progreso2" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width]="progreso2 + '%'" style="width: 75% "></div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row ">
+
+    <div class="col-6 ">
+        <div class="card ">
+            <div class="card-body ">
+
+                <app-incrementador (cambioValor)="progreso1 = $event;" nombre="Progress Azul" [progreso]="progreso1"></app-incrementador>
+                <!-- app-incrementador (cambioValor)="actualizar( $event )" nombre="Progress Azul" [progreso]="progreso1"></app-incrementador> -->
+                <!-- Para mandar un elemento de una etiqueta como numero se debe encerrar el nombre del elemento con corchetes -->
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6 ">
+        <div class="card ">
+            <div class="card-body ">
+
+                <app-incrementador (cambioValor)="progreso2 = $event;" nombre="Progress Naranja" [progreso]="progreso2"></app-incrementador>
+
+            </div>
+        </div>
+    </div>
+
+</div>
