--- a/src/app/pages/hospitales/hospitales.component.html
+++ b/src/app/pages/hospitales/hospitales.component.html
@@ -4,7 +4,7 @@
         <div class="card">
             <div class="card-body">
 
-                <input #input (keyup)="buscarUsuario( input.value )" type="text" class="form-control" placeholder="Buscar usuario...">
+                <input #input (keyup)="buscarHospital( input.value )" type="text" class="form-control" placeholder="Buscar usuario...">
 
             </div>
         </div>
@@ -30,44 +30,40 @@
         <div class="card">
             <div class="card-body">
 
-                <h3 class="card-title"> Usuarios registrados ( <small> {{ totalRegistros }} </small> ) </h3>
+                <div class="text-right">
+                    <button (click)="crearHospital( )" type="button" class="btn waves-effect waves-light btn-rounded btn-primary">
+                        <i class="fa fa-plus"></i> Crear Hospital
+                    </button>
+                </div>
+
+                <h3 class="card-title"> Hospitales registrados ( <small> {{ _hospitalService.totalHospitales }} </small> ) </h3>
 
                 <table class="talbe table-hover" align="center" cellpadding="7">
 
                     <thead>
                         <tr>
-                            <th width="7%"> Imagen </th>
-                            <th width="17%"> Correo </th>
-                            <th width="15%"> Nombre </th>
-                            <th width="15%"> Role </th>
-                            <th width="7%"> Auth </th>
+                            <th width="7%"> Foto </th>
+                            <th width="15%"> Hospital </th>
                             <th width="7%"></th>
                         </tr>
                     </thead>
 
                     <tbody>
-                        <tr *ngFor="let usuario of usuarios">
+                        <tr *ngFor="let hospital of hospitales">
                             <td class="w70">
-                                <img (click)="mostrarModal( usuario._id )" [src]="usuario.img | imagen " class="img-50 img-circle">
-                            </td>
-                            <td> {{ usuario.email }} </td>
-                            <td> {{ usuario.nombre }} </td>
-                            <td>
-                                <select [(ngModel)]="usuario.role" name="role" class="form-control">
-                                    <option value="ADMIN_ROLE"> ADMIN_ROLE </option>
-                                    <option value="USER_ROLE"> USER_ROLE </option>
-                                </select>
+                                <img (click)="mostrarModal( hospital._id )" [src]="hospital.img | imagen:'hospital' " class="img-50 img-circle">
                             </td>
                             <td>
-                                <label *ngIf="usuario.google" class="label label-primary"> Google </label>
-                                <label *ngIf="!usuario.google" class="label label-danger"> Normal </label>
+                                <input #inputName type="text" class="form-control" [value]="hospital.nombre">
+                                <!-- Tambien se podria usar [(ngModel)]="hospital.nombre", quitando el nombre del metodo guardarHospital pues el value 
+                                    y el hospital especifico se actualizan en tiempo real ante algun cambio de cualquiera de los dos lados -->
                             </td>
                             <td>
-                                <button (click)="guardarUsuario( usuario )" class="btn btn-primary">
+                                <button (click)="guardarHospital( hospital, inputName.value )" class="btn btn-primary">
                                     <i class="fa fa-save"></i>
                                 </button>
 
-                                <button (click)="borrarUsuario( usuario )" class="btn btn-danger">
+                                <button (click)="borrarHospital( hospital )" class="btn btn-danger">
                                     <i class="fa fa-trash"></i>
                                 </button>
                             </td>
